# seashells

./: DEVELOPMENT.md  README.md  README.rst  pyproject.toml  setup.py  snapcraft.yaml
.github/workflows/: build.yml  ci.yml
seashells/: __init__.py
src/seashells/: cli.py
